# docs/swagger.json
@@ -25,7 +25,7 @@
                 "summary": "Получить всех пользователей",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Chat ID",
                         "name": "chat_id",
                         "in": "query",
@@ -46,8 +46,10 @@
                         }
                     }
                 }
-            },
-            "post": {
+            }
+        },
+        "/api/v1/chat/all": {
+            "get": {
                 "consumes": [
                     "application/json"
                 ],
@@ -57,16 +59,14 @@
                 "tags": [
                     "chat"
                 ],
-                "summary": "Создание пользователя",
+                "summary": "Получить всех пользователей",
                 "parameters": [
                     {
-                        "description": "Создание пользователыя",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schema.ChatCreate"
-                        }
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "user_id",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -130,7 +130,10 @@
             "type": "object",
             "properties": {
                 "chat_id": {
-                    "type": "integer"
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
                 },
                 "description": {
                     "type": "string"
@@ -140,6 +143,9 @@
                 },
                 "type_code": {
                     "$ref": "#/definitions/model.ChatTypeCode"
+                },
+                "updatedAt": {
+                    "type": "string"
                 }
             }
         },
@@ -155,23 +161,6 @@
                 "CHAT_TYPE_CODE_GROUP",
                 "CHAT_TYPE_CODE_CHANNEL"
             ]
-        },
-        "schema.ChatCreate": {
-            "type": "object",
-            "required": [
-                "type_code"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "type_code": {
-                    "$ref": "#/definitions/model.ChatTypeCode"
-                }
-            }
         },
         "schema.Empty": {
             "type": "object"
